[gd_scene load_steps=8 format=3 uid="uid://cm6c33wedu6f0"]

[ext_resource type="PackedScene" uid="uid://c5fcymf487hu3" path="res://global/CusStaticBody.tscn" id="1_6jpe1"]
[ext_resource type="Script" uid="uid://ccis86f6a2q2h" path="res://WorldResource/resourse.gd" id="2_6ghqv"]
[ext_resource type="Texture2D" uid="uid://kg0l0ftx7fh5" path="res://rts.png" id="3_6ghqv"]
[ext_resource type="PackedScene" uid="uid://b1enarprt4brw" path="res://global/AttributeComponent.tscn" id="4_d2fke"]
[ext_resource type="PackedScene" uid="uid://xa7gpckbbqno" path="res://UI/HealthPointProgressBar.tscn" id="5_nic6n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ghqv"]
size = Vector2(14, 29)

[sub_resource type="CircleShape2D" id="CircleShape2D_d2fke"]
radius = 16.0

[node name="Resource" instance=ExtResource("1_6jpe1")]
y_sort_enabled = true
collision_layer = 2147483650
collision_mask = 2147483649
input_pickable = true
script = ExtResource("2_6ghqv")
metadata/_edit_horizontal_guides_ = [-44.0]

[node name="Sprite2D" type="Sprite2D" parent="." index="0"]
position = Vector2(0, -32)
texture = ExtResource("3_6ghqv")
region_enabled = true
region_rect = Rect2(192, 192, 96, 64)

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="." index="1"]
position = Vector2(0, -6)
radius = 12.0

[node name="Click2D" type="Area2D" parent="." index="2"]
collision_layer = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="Click2D" index="0"]
position = Vector2(-0.5, -17)
shape = SubResource("RectangleShape2D_6ghqv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_d2fke")

[node name="AttributeComponent" parent="." index="4" instance=ExtResource("4_d2fke")]

[node name="HealthPointProgressBar" parent="." index="5" instance=ExtResource("5_nic6n")]
offset_left = -34.0
offset_top = -71.0
offset_right = 35.0
offset_bottom = -66.0

[connection signal="mouse_entered" from="Click2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Click2D" to="." method="_on_area_2d_mouse_exited"]
